--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: flutter_cookbook
-description: A new Flutter project.
+name: cookbook
+description: App for storing recipes. For now only in English. Beta version.
 publish_to: 'none'
-version: 0.1.0
+version: 0.1.0+1
 
 environment:
   sdk: '>=2.19.2 <4.0.0'
@@ -27,6 +27,14 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: ^0.12.0
 
 flutter:
   uses-material-design: true
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "dev_assets/appIcon.png"
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "dev_assets/appIcon.png"
